--- a/Seminario/Aplicativo/Site1.Master
+++ b/Seminario/Aplicativo/Site1.Master
@@ -8,12 +8,17 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
     <script src="../js/jquery-1.10.2.min.js"></script>
     <script src="../js/bootstrap.min.js"></script>
+
+    <!-- SELECT 2 -->
+    <link href="../css/select2.min.css" rel="stylesheet" />
+    <script src="../js/select2.full.js"></script>
+
     <title>
         <asp:ContentPlaceHolder runat="server" ID="cph_titulo">
         </asp:ContentPlaceHolder>
     </title>
 
-   
+
 
     <style>
         hr {
@@ -165,6 +170,8 @@
                                     Administrar <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu">
+                                    <li>
+                                        <asp:LinkButton Text="Regiones Educativas" ID="btn_regiones_educativas" OnClick="btn_regiones_educativas_Click" runat="server" /></li>
                                     <li>
                                         <asp:LinkButton Text="Usuarios" ID="btn_usuarios" OnClick="btn_usuarios_Click" runat="server" /></li>
                                     <li>
